src/test/deca/syntax/invalid/print-withString.synt
print-withString.deca:2: